# bioresearch-agent

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DATA_GOVERNANCE.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  arxiv-abstract.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  RELEASE_CHECKLIST.md  REPO_METADATA.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
bio-research-os/: main.py  requirements.txt
bio-research-os/configs/: default_domain.yaml
bio-research-os/core/: orchestrator.py  persistence.py  router.py  runtime.py  state.py
bio-research-os/demos/: README.md  demo_ancestry_aware_mr.py  demo_biomarker_discovery.py  demo_causal_evidence.py  demo_causal_inference.py  demo_foundation_embeddings.py  demo_gwas_harmonization.py  demo_ld_reference.py  demo_literature_review.py  demo_realdata_loader.py
bio-research-os/domains/: neurodegeneration.yaml  oncology.yaml
bio-research-os/engines/: analysis_engine.py  evidence_engine.py  execution_engine.py  (+4 more)
bioRxiv/: bioRxiv_submission_guide.md  cover_letter.md  submission_metadata.md
bioresearch/: __init__.py  __main__.py  cli.py  router.py  toolspec.json
demo_plugins/: __init__.py  trivial_scorer.py
docs/: 5_minute_audit.md  GIT_WORKFLOW.md  PLAN_v3_final.md  golden_paths.md  release_notes.md
examples/: alzheimer_literature.md  mr_bmi_diabetes.md  parkinson_biomarker.md
framework/: ARCHITECTURE.md  modules.yaml
skills/: README.md  install.sh  registry.json
tests/: benchmark_lite.py  test_quality.py  test_router.py  test_scorer.py
(+103 files in other folders)
