[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bioresearch-agent"
version = "0.1.0"
description = "An open-source, reproducible workflow framework for structured biomedical research"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alimujiang Tudiyusufu", email = "Alim_T@foxmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.4",
    "networkx>=2.6",
    "requests>=2.28",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "mypy"]
llm = ["openai>=1.0", "anthropic>=0.8"]

[project.scripts]
bioresearch = "bioresearch.cli:main"

[project.urls]
Homepage = "https://github.com/Alim430/bioresearch-agent"
Documentation = "https://github.com/Alim430/bioresearch-agent#readme"
Repository = "https://github.com/Alim430/bioresearch-agent"
Issues = "https://github.com/Alim430/bioresearch-agent/issues"
